# ocserv-rs

./: .gitignore  Cargo.toml  README.md  config.toml.example  ocserv-rs.service
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  tls_config.rs
src/auth/: mod.rs  password.rs  provider.rs  session.rs  traits.rs
src/auth/sso/: mod.rs  oauth2.rs  saml.rs
src/control/: mod.rs
src/crypto/: hpke.rs  mod.rs
src/http/: debug_stream.rs  handlers.rs  manual_http.rs  mod.rs  raw_connect.rs  server.rs
src/http/handlers/: auth.rs  sso.rs
src/protocol/: dtd.rs  mod.rs  xml.rs
src/utils/: cert.rs
src/vpn/: cstp.rs  dtls.rs  dtls_engine.rs  ip_pool.rs  mod.rs  tun_device.rs  tunnel.rs
templates/: auth_complete.xml  auth_request_password.xml  auth_request_saml.xml  auth_request_sso.xml  mock_idp_login.html  saml_ac_login.html  sso_success.html
tests/: control_integration.rs  cstp_integration_test.rs  saml_integration_test.rs  xml_integration_test.rs
