[package]
name = "ocserv-rs"
version = "0.1.0"
edition = "2021"
authors = ["jdscript"]

[dependencies]
# Async runtime (CSTP packets sent over same TLS stream after CONNECT)
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# TLS/DTLS
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
webpki-roots = "0.26"

# HTTP handling
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# XML parsing with template support
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.19"
lazy_static = "1.4"

# SAML support
samael = "0.0.15"
openssl = "0.10"

# Network utilities  
ipnetwork = "0.20"
tun-tap = "0.1"
pnet = "0.34"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }
cookie = "0.18"
url = "2.5"

# Configuration
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
rand = "0.9.2"
urlencoding = "2.1.3"
