[package]
name = "ocserv-rs"
version = "0.1.0"
edition = "2021"
authors = ["jdscript"]

[[bin]]
name = "occtl"
path = "src/bin/occtl.rs"
[[bin]]
name = "ocserv-rs"
path = "src/main.rs"

[dependencies]
# Async runtime (CSTP packets sent over same TLS stream after CONNECT)
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# TLS/DTLS
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
webpki-roots = "0.26"

# HTTP handling (manual parsing, no hyper)
httparse = "1.8"
http = "1.0"

# XML parsing with template support
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.19"
lazy_static = "1.4"

# SAML support
samael = "0.0.15"
openssl = "0.10"
tokio-openssl = "0.6"
foreign-types = "0.3"

# Network utilities  
ipnetwork = "0.20"
tun = { version = "0.6", features = ["async"] }
pnet = "0.34"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }
cookie = "0.18"
url = "2.5"
sha1 = "0.10"
hex = "0.4"

# Configuration
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
rand = "0.9.2"
urlencoding = "2.1.3"
serde_json = "1.0.149"
flate2 = "1.1.8"
chrono = "0.4.43"
http-body = "1.0.1"
cli-table = "0.4"
crossterm = "0.27"

# OAuth2 token exchange HTTP client
reqwest = { version = "0.11", features = ["rustls-tls", "blocking", "json"], default-features = false }

# HPKE crypto for SSO token encryption
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
